# learning-protobuf

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  learningprotobuf.cc
api/subscribe/: subscribe.pb.cc  subscribe.pb.h  subscribe.proto  subscribe_handler.cc  subscribe_handler.hpp
benchmarks/: dummy_benchmark.cc  main_bench.cc
benchmarks/api/subscribe/: subscribe_bench.cc
config/: code-coverage.cmake  google-bench.in  google-test.in  version.h.in
source/: learningprotobuf.cc
source/api/subscribe/: subscribe_handler.cc  subscribe_handler.hpp
source/util/: util.cc  util.hpp
tests/: dummy_test.cc
